# internal/server/server.go
@@ -13,6 +13,7 @@ import (
 	"github.com/jadeejoao/jadeejoao-api/internal/content"
 	"github.com/jadeejoao/jadeejoao-api/internal/gifts"
 	"github.com/jadeejoao/jadeejoao-api/internal/guests"
+	"github.com/jadeejoao/jadeejoao-api/internal/importer"
 	"github.com/jadeejoao/jadeejoao-api/internal/media"
 	"github.com/jadeejoao/jadeejoao-api/internal/messages"
 	"github.com/jadeejoao/jadeejoao-api/internal/platform"
@@ -28,6 +29,7 @@ type Deps struct {
 	Gifts    *gifts.Service
 	Messages *messages.Service
 	Media    *media.Service
+	Importer *importer.Service
 	Auth     AdminAuthenticator
 }
 
